--- a/Server/package.json
+++ b/Server/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^7.0.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "rate-limiter": "^0.2.0"
   }
 }
