--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
-    "rate-limiter": "^0.2.0"
+    "rate-limiter": "^0.2.0",
+    "xss-clean": "^0.1.4"
   }
 }
