--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-rate-limiter": "^1.3.1",
+    "express-rate-limit": "^7.1.4",
     "helmet": "^7.0.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.11.0",
