--- a/Client/kanban-task-management/package.json
+++ b/Client/kanban-task-management/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.4.3",
     "@types/react-redux": "^7.1.28",
