--- a/Client/kanban-task-management/package.json
+++ b/Client/kanban-task-management/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
     "react-spinners": "^0.13.8",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
