--- a/Client/kanban-task-management/package.json
+++ b/Client/kanban-task-management/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.28",
     "axios": "^1.6.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
